fix plex deployment

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:sHCrQnMQngqE8vOETPRr8lmw4q24KwSyavFxspVP6/6CrzIKec5dfSOSNtNrEJlNS1UIMs0GW0ENn9U8U9s8dqw=,iv:KtkO/pIqeLC9D5ytFo7EUlLB8VIPir31+yG+A8KTRSI=,tag:PvwMO3EEINkgj0Ko/gtKHg==,type:comment]
-#ENC[AES256_GCM,data:G5ngVKxake27lgH3KB+c/7/cLoB8HhE8a2fepAzwK/jDY7DiUzXenrmlmuA=,iv:+plzymVexB43m/vsdTh8RXhiNocHh9Vlj05ADzHVBC8=,tag:m9hEabc4b5bZjGZ/ix608A==,type:comment]
-VIP: ENC[AES256_GCM,data:FSj3qMX9CFpUZdGOVQ==,iv:1MdOi4xGwqd9YK2k4yTWjmq4X2p/6FohYUkYVt74Ono=,tag:nXz4Aw6QkJVAAwFRRM2evA==,type:str]
-#ENC[AES256_GCM,data:k1NcAM2hMe+R2hPN4gco28mw8upHjjFii6Tq,iv:9RRcPsfO2aRpohPbXxevbUcsnoMZ94a4/BC5kgwyaNs=,tag:DmDsFC15kuuCJBQcPIiZZA==,type:comment]
-#ENC[AES256_GCM,data:kEcekjta22xUxPwx313aQsG+SvpDRndFUIGrN8tSm5qrhGNpo7JWOZVMTj6NgmLycEU3uChYuF5gCR1ox22KWPN9rv1F4jgYZKgPJX+hfQx1R30i4+se4Ls=,iv:RCIuAUJQwuSQab/H5EnR5ao9KGJpyDN4s/FNJjemTKY=,tag:pj+5S8OcI6k66zYg9n29+w==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:2TNljp4RJ/p7tXHL7g0=,iv:PxjX8zJOGRvQiHV9zp4ieLtjK01bDpeQnt81FmxtL6s=,tag:8jaXzjzAADZcDulJcMo7Xw==,type:str]
-#ENC[AES256_GCM,data:fIz1X8FjCeLNHZh21iqFoUROy7o5SSB4YHnmo9ksgae9bQ==,iv:L/5dU/V27721jMcoDLARLgEHrk1HvtOaGlq19NqlF5E=,tag:OvXb3PmeRq2ENI+JRrcx1A==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:6CWX0kqpg40PH0ZJGg==,iv:tm1fqPti0Vb31bciOIv2SV3toeSfpFRkBpYbv4yrjxY=,tag:2g18kSkJUEpqIN6Fb1rz/Q==,type:str]
-#ENC[AES256_GCM,data:QmOxNPwcDSkcXy77t9cxEgc37FX2bbMi/xoIkOx7tD0yDDuMhTmKBloco+Najkg=,iv:yxgEaYhGaI02peb88GcVZv1bnbzbTRnLMOwyssph1Xw=,tag:zXQFCXUknUKdNwF2adb13g==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:kJvjnCtPSOgiosNliMJPDEEDiRuh2CHhBQbNaYoYbA==,iv:oOCpE/Nb2m2W4VqIfj0K8wYRYFh5C/5RYLSPDNGEVLg=,tag:kg2bDhdMKVCDZcoODiJSfA==,type:str]
-#ENC[AES256_GCM,data:etQWKX9rmlfdEHIGVspktCzrR2wL8eM5ISEiQUNFs9huBLExvSCH9I5ARJmoQ7hkz0YhUQcHncoPoDSKcdz8OMO4dsGdSIXhYSjSfrF5d5jSRQ==,iv:3aclQZIZ+a6vQ0cKsV3wr5drhgdBkfXAbvWEhDS8Dog=,tag:211p9qkaRAdw+J2+1nQgmg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:1vbMGBGeL0/1Af2L/XPR,iv:YtvoNPhyFClOZvIwNnkpKnPZomoaXXcUTNCBsJ1mUUQ=,tag:m6ZedZlu90pjnYQYHjs2Zw==,type:str]
-#ENC[AES256_GCM,data:a/IRvFhMM1VlynlOfSZCIuE3KqULINqNg7yYZ5zRD84d,iv:YqZJAa+e38j5liQSO2l8zbhC0/+lmAJgxdC54bOz2gY=,tag:x+OVhN4edrtSHuGsn4vXCA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:vU8VcG/hMmzXy3gtFBCE,iv:XtsbTYjscH/91zfAf8BIBCrXQROqJvX7KuFteUUiLvM=,tag:i/EFbjK9iWTjYLQgnVQ8Nw==,type:str]
-#ENC[AES256_GCM,data:Ve0DZwQYXRIMyfHpe4TM71FCfoNnHFeYoBa9MC5e56TQtQMM+Dtx8J6Wyaty1yxpLVVZUsF6KOfcmZRMlGJuF0vao3+w4rJukOB1sNrS3aI=,iv:ozJEiYEUGU7/oogatqwLkUMJtuTO4Q0F+kzPZBIoZk0=,tag:GyZ6etP3BxUoC6WWd4bmKQ==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:xhMZXzxpihGdIkIVQIJX,iv:9gKKhCoHWzykrlnJinxj+2AcL4vTAjqHXkcl9mS1B4k=,tag:WXgxisYZjLTtU+fnK3bJPQ==,type:str]
-#ENC[AES256_GCM,data:agqzHriC4pscOBcFvavzyDfM6NZ4TMJ5/K6Xvkke5hVtD2kiwqeMGoJeazhwjYYHGBs9+4bzukhy9xazk00mpLMosQ+RsRbPRIMOW4/NfjFoFGWLUCjp,iv:3eSxH6lumNdnstTpPVY71hnc1P6fkUwjnwXiyoLriKc=,tag:PJEd3sKoTJkYvnxXOcsbqw==,type:comment]
-#ENC[AES256_GCM,data:RlRluM86t0RUKkLlMJmPEEHouomA7c1JtAJWX3JbkXQ51GL2rtSAGhNhLsPrVC/Rw9xy7NmfFwOM8ctJpCCGF5E9GFBu7VsTXqPGirjus16BffX3hlYqqg6hQF9XygI/4OhhkxE511KnrnfvOs95Ud1dQRgvkpgIuIGsSg==,iv:rEfOs1Z+mwEES9A3rim4ycSMTt9hhPTnsDcy2cag8YI=,tag:liKcQ/htKJeuNTrnujGsGw==,type:comment]
-#ENC[AES256_GCM,data:6rmexNNgcxsvl1fY+9UpUJs9xg7c1bqE46IZ0zzp4UUto6m1dXchZPpS8s1h3QYIfusoNoCw9Zmyb+2dvwgV5fpvHyaP1FnyWKcakxO2W9s=,iv:clLKgQHB9QrTHFkAmE5TN3QZN8kRDrIcMs0G0ptDYFU=,tag:OErI1E9uAE6JSmwSWcNKWg==,type:comment]
-#ENC[AES256_GCM,data:xovPsxJSGZOHmZ5VBKOe+j9OJlBV96t412044SbATJIrYQ/EDvn7UX0h0XKK57n5UNLbJN5K,iv:oU/Nq2j39Aw6WznFojjotfGeF4dbTvclu4O4RwNEmJk=,tag:/4ZsB90LurpmzfdNBGNs7g==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:M5JnSg+fFw49bvW+,iv:vzwu6FBe5qoNLtCGHDeJZTmJQjyAJgEdSAjZnJniUN0=,tag:xsfEuyqesSWoEqXd17Z/Ug==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Sc1SAIb882WDl2giHMsF010=,iv:OZo16LcnvywmhAgvc9l/oUc6hc76ODPIKGSO4q9B6os=,tag:XrEVhv/0KpWlMrDx7AVPUw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:/zjzhH/PIPVUpxmFSuFa7kNRzw6GrYfQj+/NN0FLqRY=,iv:nqj+UaJdgZpJ8DGgRhJLXz55HJ5jKNdbGspFN9la13g=,tag:NO7CHKUy9rPgm67/4/v0pw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:EwSkNaUv406lNdnrqANs7XpZXaWILQDp62hY7pjROaljF9Yy3KMyNA==,iv:9FkrG/kX4EhUvzz7VI5/kYjR9p2N3LafvU7BMj9l0C4=,tag:eVEaG3DDPpoZorP1x3D+LA==,type:str]
-#ENC[AES256_GCM,data:RUObGZtPkKMzVbZtCh1ivrrtgk7jpYY0YZqRzSA78VvvGOXtM/zbFi58fnEVTx4Trl0TKLu1ffgzBthxnbA7pQ==,iv:rklCJLJ3WfRB+j3kJwe1xnIjZQAfnTb3ZBYM+v7s0uQ=,tag:GWBMHuEi7jrNz90SVknFWw==,type:comment]
-#ENC[AES256_GCM,data:ChJd08kzl34S9hTgETja3+3bvGagU0j5ax2Yi9uJ9x6OfatKANB4/RxdT+Me2Fp7pm0XNbUWq74=,iv:xXLoUZRcit60LzLUmZhL3G/aUr3vLUAQ0yCx+xWpnDQ=,tag:JnzkLS6AB4Vr184cUMjdfg==,type:comment]
-#ENC[AES256_GCM,data:nPUIg/6ZNSVAJfsOv9uztlGKsfaR3sVA+w==,iv:WVg6KeBBhGSQ4mLL1V5IFSbIRbuhZtw6ZL/eOLyGc7E=,tag:DX9UYmPhiUz1/JuNmWJGyw==,type:comment]
-#ENC[AES256_GCM,data:bcc/FHGzScBsLxPIL6FS1V20lwEL8DN8xjsloHFiM0q+xKhCS4qBhBz7yItGGgY1kTQ8wSw+hv9TU3cBN6vaSFlIDYysQLvAdTxTJr0=,iv:WN4aMQU/H5DCi98px7kzaoDvuORQRlyUBuKnMIGTvNg=,tag:LelVsuGjYYbncqbFkMw4LQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:PceGce1OAGgslAMZ6VBAxut78UdT1YWeYg3UTwtG8VzO2uRIIkIPjpXlH6YCLEcn,iv:qoMafZN0ueOBht+mAVijnxrosAsA/xdKcsICOFSmlI8=,tag:cyby/9DIngFphrYcvXcepg==,type:str]
-#ENC[AES256_GCM,data:073xALNtdUCWsudcgg9Mo+w3G7Z1eDHAwKF4aqvzDQRqMz7W0tGcrK8UofshnKlspAWn4qBRTVtz2aesmb4FbLygDqT3woo=,iv:DNreJw8mieB16AV8kmMVaeUMiizvB4gJYnObOJkOBg8=,tag:CE07FqiNvNyUQYcIpfSFuw==,type:comment]
-#ENC[AES256_GCM,data:CMzzMjJtEnnBF793KknGXt+tc6frMRcnx3aDEigARVOCyNcu1SnRovzn3Er2nzgx4/bMfpC/,iv:fY5eapWqdcjCD6n+IKirj3kv6dgXpH6NW6faYUrHPjs=,tag:GMiHA1oFBnC1dHndL2VX3Q==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:pNUAJsyi8g==,iv:TVWJYcqihmvycVQW/Z8LeMoOKNVHuYzzX6IEnagIVYk=,tag:XsZHHj6Agz/Y0oBoa8HmfA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:JR27ffLCo38NXWSwzfu8Pj0EbMY=,iv:lNHgcyVvqoKvnukz29ob92D2ZMA4fpMLVcL9vow3zGE=,tag:qzC76ieZMkjCXiPx5ACtGw==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:sEdsxVrApciiX8E=,iv:1rulODYEkyMhLKlfYCCaw0C2mb9CKv31I5B821ifqUE=,tag:XUJuotc93m4S/AiaTVhF/w==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:n1fBuahAlblUkzvJH+z7,iv:IAPt97EKMZLI4ciUt0GfBVdcfMBXUxl6IARr9x/0xDc=,tag:5fW5DMxCvZC4NRn2/sPW4Q==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:N17qTUqtw9r99J+LHJtOexoKeHuGcP3fJg==,iv:CwcLQc1UIkQTH12hvozi1ZY8i+/FQt77uSRUKAeUfuY=,tag:0qHb9tfTZHMXap+kfj4cmQ==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:2dKiYeCqbhEhmXVJHo5OrhmyRlGIf2tp,iv:0ujpT8l7/T2Y72bWV7OhvlGhORzJ4iIXejj0hYkqrco=,tag:Q8xKD8cPYxu2LmXZDi0dlg==,type:str]
-#ENC[AES256_GCM,data:dc3fGIEytykA/vqwRI7Mzn6cmdxobqCA6cOlo/iBxM69YIpCZmQ=,iv:nw8OY7AxmbDFdnisuJlpsshpYMl9VUy/y0SAT562RSc=,tag:/PL+qQdIAAMR9ZDrsB7DAw==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:xRczr7VXRsR91v1HhEnEnVWJjGU=,iv:OpVYCPiDQvAOQkAwXxm8fY8vlVBgU9taF2v9k5v7Eyk=,tag:DbKu0W8nVPVvDLvpm2S//A==,type:str]
-#ENC[AES256_GCM,data:Odqw1CN3k0saywHZYV0=,iv:4FTTeq/FidFcpb5/+SFM6o+ygWgZ+W8UYtsmT5BCjuw=,tag:IMlzydUbmZHcjR5OXZvhAw==,type:comment]
-PODNET: ENC[AES256_GCM,data:vrrTujTpS91swrb5Iw==,iv:hcvUiMVoQ5st3E5JWDKqFY471NuQFGejXmAdvQLXd4k=,tag:gWK1F6khZaQ0BcK7MwOtsw==,type:str]
-SVCNET: ENC[AES256_GCM,data:mPTQzFexay13yf/ZXQ==,iv:14Crye4f3Yb5hfY98NY+f/JG3NlkHUj9tKO2tNyG14s=,tag:LI6fUUm0MeILw6UakepnNw==,type:str]
+#ENC[AES256_GCM,data:wsqFs30dT/rr0ONv3erFIDW3+qFXTNSi3LV4OgUsjblFq34TZHu8Xlfzk86Zp0Jn/51S00iE1/uErnb9N1cip2k=,iv:LdMAZAR+sqi9mP3Foh3qu68it1acvMMmXclFeWp79oo=,tag:G73oEFkT0gUeAXyKmF+kOA==,type:comment]
+#ENC[AES256_GCM,data:REylBHfB9LCUiDBZ2fbZqwclUgvzF3rmZ7GbbnRANwyoDYN/efQ6s5OFSrk=,iv:JrGwbSRgVXAPQBm4AofVqmPzCmrU2xa4/XWpQN7nASs=,tag:KzTtpxhsW2npXUQ0eOwM7A==,type:comment]
+VIP: ENC[AES256_GCM,data:LyevMxkd8WSQ20WHuw==,iv:kt4zPhw+I1LVr45/k+qhHZX6vazTs+OmkgzayodS+O0=,tag:H5rRoSY0SpFteRiPZAfltA==,type:str]
+#ENC[AES256_GCM,data:7GAN6iDtVx6CUb6QdTNWyDkPnDA/8GAeWma0,iv:ualG3ggFGRNofIXCsOVScZf6FslCxzwVQPEELSRjvcA=,tag:IfmYnO2uQxcvyamlazIt4g==,type:comment]
+#ENC[AES256_GCM,data:+0ZOGKfSWKLZ7LfmdEVvCfOcnc6SsdDZPMmoquYBx4KkBU0dhl/s8MNxwWb1DGtzDlDqyXi7sc6YOE7Gs6RnuFXD1YEEv2YBLyLg/KXrSsL0MrMoiS9L67k=,iv:M+f7yeF6WPneq0/5N3SUsJuTgsPP2dKGP6zIfKZDz3Q=,tag:A4WPgVvyqoTOdmogJfbzDQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:5Okpu5WnkAvdvZJiMZM=,iv:T+7X/BALLx+qd3nxtrg3HDZ2e7gx1HBYTGootp1kjXI=,tag:i+LRds323OEq1LvSg6dMcQ==,type:str]
+#ENC[AES256_GCM,data:Kqfz/858Po3O5qoqElwsOXax6FplPZDt6QHuyfOBietyfg==,iv:iF8cOtHxWOkW+nQjjKVOho3rXOP12InGO+kL9DYYEzU=,tag:GAP4n0AwllAZiQFvm7KKKw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:xHGTsCcr7ojgTg05hA==,iv:QaqDTqyqF+UNyw+lJAVu+QHE4wNSDgr72yGx4W3nJ48=,tag:2urCgTRk/BB7jd1kR79V7Q==,type:str]
+#ENC[AES256_GCM,data:wZ9GsHrbgVYeJebgdY28cS981w3cnpdNp2FESEuKbK/EIjEdcpS/KFRXEAHwYVo=,iv:ftgDlneumkDjjIgsrAFgy62EruxVbgd+SkFbVpA1FAo=,tag:zSJKSQVcjTQs0L1yrHjYWw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:wl+8UGyXzSWpoZwqxhVGiSTIlvMAsrNKF/uc1cVHkg==,iv:QqBlKa/CiTrl0JZIm/5k/pm61q6mhQWP9ZKv24AMLkk=,tag:RcgVrNf3Uk3nBDO13yivWg==,type:str]
+#ENC[AES256_GCM,data:i7w3wv8Ny+tWeC014VZ0MCJmMa5NHTaOdG0n4+5iM67RcQErBFJBoo/mjVPNZquEC8vIuVmXQoM4gn3pmHWy+C+UilXo8TT18XhpDLJ99c1+Iw==,iv:foW31EESmca+Qi9il5KcXzJTtAQsAtGPEorPXsmvAXY=,tag:KW5tedq7BhY0CLSFBdxpfQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:LJ90tvqojAPjTtxrX+pR,iv:Gp2efZ587mLpIF0duQlz2ZFx5Ec6ytkq4NxdVyAn6RQ=,tag:Jap23QANdhNz8o2mcar/SA==,type:str]
+#ENC[AES256_GCM,data:ZjcVIY9fgEiNvJ0/MoVvju0cP4U8t4Q0WA6NblgJ6sYN,iv:E6Iisuk+ggcVrXw2ko3NOrMfIZwwjfvVrVW3c0LYMLk=,tag:oybUWTMTmmo/1bUyKRmMAQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:OC0wLJUc7Y1phA3PIgdA,iv:tbz0RsJ9n7HVMJNtKRtLXhId06G+VIyrPIQRTRZLIRg=,tag:zKODDQjGemn7FY0zveXFxw==,type:str]
+#ENC[AES256_GCM,data:6fe3oPRQKfbF/198QLHkjOBg7050ntIuWnETikMAc6pU/ufryrzo9khyU7tZHeoetfkbPApW6G7M+Zduys/HG5km9daOPtm0mAMZ8EdXNG8=,iv:mpIyQ0CI1FIe3fEJYIIFC4l5jLlULGxpWQMMr1BcAlI=,tag:MUXqz7Xfc/0R0LNNjVwKPg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:R5CQoTM8NfjNI0LcZlnr,iv:oaKUC1o7AyWs8sYOMbS42yklmXMmB3Nc/uOcQRylt54=,tag:I27D17HONzLcJ0WgH1UfhA==,type:str]
+#ENC[AES256_GCM,data:SEoqqa/EL6lGMfKRIiExp1dWSrM1MqWC3qGAZYjYvDkHhuc299t0pX00FiSv9eFipl1Imud5xMcvd9XAKUH5q9E+zfkLVmyjYXCMJG8etQIvvJwqCYFg,iv:j+0OYNFj33magiY9kbtYl69B5BYDLZY9AvH4s63M7sg=,tag:HqC5JzOb9DXwHUTFVUkq5g==,type:comment]
+#ENC[AES256_GCM,data:dTjex2c5s0sRmth4irlfvY9mi5orVFWuAwST9dIncOE6SgP7aveWD/vPmhkZUhZJfmIrZ6Ai9x8Sg3Ag4sizr5Gb6bHyDbvBZzeIDkq27eDULGqt4307EgjIMvL/n0T+Wt5FDNH1hDT9OeS0Or6jVDPFnlofWTQZdVFHLQ==,iv:N8jPhABP/DJm6R4gDbRlwItwNSJjr4gLtSECxjrITwM=,tag:7AN/5FG243ae7RGtB7/NGQ==,type:comment]
+#ENC[AES256_GCM,data:ZCDipbOBqutyTU079Gb/3DTfbj1OtI9uh2CNaxUREfo4Gi0Ov/ic20/UH+V0vu6J/5ejdQFOEplJXznuNOi5gUfG4eFaQM08nDldLcm6rgs=,iv:U5RN63mFv23+CToOY+kpCmsK/xcn7XM33v8a/+9OCow=,tag:IgShCuX307E5F30pgnxypA==,type:comment]
+#ENC[AES256_GCM,data:q2v3+Zm2TdoiHl+kpujmGtbUo0UGWiQ258gvMBbWttej6zwv9FnXEAiVI6w5TPIpTj/B+BEm,iv:HMx61+RiwaSKIDYRID+Gq1l7gG2KHHyQFjSlFkfb68Y=,tag:DMA2zVSVfJe6BywnJ/sa9w==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:C0w81TqGK0gpyOvN,iv:DKV96le97iS3mqAHa0VW/Z2eWS38fB71nviR1EGvWiM=,tag:bYlqBSOxpZVqEfri3FVNNA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:SsKaqQf+WdKp2RC0BX+ZZT4=,iv:VxxLhyLKtVMs7NSGUr4+l5QcyFDsD8zBJMZbWt0eta4=,tag:9KoVezODOrTjc9rl+zcTxw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:ec2D6cqQQ1KiCFEviynTPx7pG9iwV3tMOius9i9qF6w=,iv:pptxc+LqJh5eVvxriuwrA4jKoIc+xzUVdi9w20niEj4=,tag:18L2S6JpnL/5aCxJtPVEkw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6sEgFTMAOJEstNJkeQGpFSJk4vKayb0hW/tBYdgSZ0Ot39RLfHYULQ==,iv:4jcNHCGSWJaf/nF9+aDngojGLNPf/wxteqa3lMRlvuA=,tag:XJccCGqBSZsVWAinSg0DVA==,type:str]
+#ENC[AES256_GCM,data:K6s2fzl/H7D8jWnGT1IaD6L3MEf59ESpV0eOSVP9wx+efWad2JdKVZu6K83VmjMdf5U2qXMr4JAZ3A8X4AR4sw==,iv:BJfZOTEo7PoQlqzI1Ceqs3hhMQk9a2eXSGESLY979Ig=,tag:8sYPk9m5PAH5wzx15mnaeg==,type:comment]
+#ENC[AES256_GCM,data:QMlF+mde0TMb427KhWbNGR7DfsXj1f1e4NYu2JEb6Bfn8iGANxWR5aAaEPlQOj45/abExEy9+Jg=,iv:djb7jc51QEqUHAx7dXIZiFkq2C16T2KeM6HkbxphMwo=,tag:VwxW7n93gVsLYSUvq1ec/Q==,type:comment]
+#ENC[AES256_GCM,data:xZa0pqYS16kEdap1C1JUTPnUaRB2yoefrw==,iv:rcTb1NaDkuZPGHDZqQFCV8ICnOc8Gc6X2DLx57Joo5o=,tag:2Nu461Yfc1TJH0M5YPshIg==,type:comment]
+#ENC[AES256_GCM,data:Cs2Y3fz8gCDX/gBblgDnv1RQH5bgGZA33JwQW+rh74xqybP/f+nvcLGc5RZit3rxIXIlByNbIgwQJMt12/BnPPvV2k68AAiCBODJdyM=,iv:+W5VEwPq0f93FB4Dm34qUqv1OHEB8jDtZRONZr3iiSw=,tag:LzMdEJyY8QwHIom6yQES2g==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:jATVf8nTM0Wj8TUc+XM+NMl5a9LuC/TcZMdJXNg6SG0j9eb9yOrXaOqf2R+KPZ/n,iv:pY2CGQEROQGxUqDI8UJTcwa+n41XYWwebKLzCGPqxiU=,tag:8FM462Ji640R5VPGdd3HGA==,type:str]
+#ENC[AES256_GCM,data:HQGUbd1K8vbIWOWQX2oLMhtajTbZr+WeO8ItVrh2B2lJPOWta3U7ahhWMF9Pb9uPXWJBg1ttAf4TqmD8dy0BvmQYOGOqKKM=,iv:28hwMsWFBeLA1jfCLN7XePiqvd68R1yNs+ue3yu+RJM=,tag:i8eqY97mJyG31EFoj04GQw==,type:comment]
+#ENC[AES256_GCM,data:rMCUeI836ZOOYvrVg+pbwZ12uu0vV5zNFkpzy/Lr/40IoQok8iF2J1c9thsnBOdfKOZKJkfR,iv:puUCPN/XrgLQ5Lh2oKE85qvmhBCzTJ793+dBKZtczSg=,tag:plyJYpaHN2mGxpwl13DvXA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:n4Jy7Nu+UQ==,iv:hnjHtjw3ske0pgvl0RXDORMDe9kGsJZglx2B/T2G14A=,tag:U1Yj9IttPX0FBOUl83BpLQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:8fzTpvmM2kY/s/MrvpiEjxTZUXI=,iv:3y5qUNHbcz1FlDKsUw5zS89NrTHbue6X9j5ZbfBQH8s=,tag:Dpc0RbwYL57BIX1JR0kvQQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:gF/Hx71znDV1XI8=,iv:oI5zCkmsRZsR9hxC4oji9vG+GfIEE7kgxawjCvKBwEM=,tag:iwT9VeccNWBflAQv6Ady8g==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:W5uJtWNOeoXowCpuQsSU,iv:NCTom2Uj6SxRK6cBmP66857yZ3X272/vggyeUUEQ+B0=,tag:vRGJCxMyeMzTFGmtcTnkxg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:1ioZ8nbrwN2jPPeBxUccFZfjlXQBwjLb+A==,iv:O1/5jM0fsFtRbVViy9LFqyV6PXPKgnlOsDWyFMG3WHM=,tag:ZSMnJvzID6E/GdrKRithRQ==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:o6D3wZ2ZWzHbsqur0DmN8ljJ2ZOn0XkH,iv:CoLE+g3ignNYVo3EmDWlWVIztLyrZie7WhT3V7VA8rY=,tag:x8sco/wJUM0ALvbduKxHyQ==,type:str]
+#ENC[AES256_GCM,data:o6GXC1OfZhL6S3U5o1HfV5YfYDLBYz4sZcrdr/B3VhMmmDL8RM8=,iv:DZE5vWeWChxKJiVMXvz08TuYdXCitjD0s+oEUysa5w8=,tag:+ndI6QUIr1CBz00wLuAldQ==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:0ewNcvB+j1sSODY/kjBZ3vFgROc=,iv:n1nj650oS8gc+0vFrqOATQI86B3qNCm1+Bn3O41wW+o=,tag:sgbp8dknZTDfJ1o8h4HhOA==,type:str]
+#ENC[AES256_GCM,data:O4MyZAH0GyYMrwM3v6E=,iv:tgRcDrUwOt5SRh9YXZgeOQc7b9ZOjhKe0+CMzvldTdc=,tag:TkGY8gVzfn7SltEMB9GUuw==,type:comment]
+PODNET: ENC[AES256_GCM,data:IvNi0gVxQn29NwJ8Ug==,iv:0kZ//BJJLNkbqcZ8zFP07AM1ymR5WPiqiUsMT288pA8=,tag:l3duo7DO2ESaiNCsQ2IlNA==,type:str]
+SVCNET: ENC[AES256_GCM,data:R5zKzLtsw/HMJ4FeDA==,iv:3KaHydGet82OAcZqL3pBFLXdGfuMKVpwAk+CN2ifHMM=,tag:uXqGs8HEjYwkol6IDxkwaw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvUzVtbXYzZlBlSlJ4TC9B
-            OXRiMnVPbHE3TW1Kdmxwd2RzZDFUeUFMaTM4CmtwQnZ4anpCRzUzMldzd1paQm1h
-            STRpRy9ZVFNpNGZQbGtnajdMSjlxcmsKLS0tIFlYWU10VHFzTUpYa3JBRkY5ZFM4
-            OG9sZWdpZCsxVjNMS2c2VzBRVnNsVHMKC9OUmZItI8e4VmZkONeGT4kRPOuTQrYB
-            4UZbbGt0J+A1R86aCtkUATAvQgUJGFXZCe8xWC892QokBtoy9ja9vQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQU2x2RDRvUFRNSWJXMTFI
+            cGJXTkJZeDBURTU0MThhd1lSREdkSTBBeFFjCmhHU01aWk0zOEJRV0ZNS210SGJS
+            ODBKVzliNEFyaUVsTVhnNDdVWnpWOW8KLS0tIERKT3M1R0xoaFJ6Zld2THR5R2ZC
+            M2l6eFRFMzcvcWxzanBvV29YWTl4UUUKW8EzmnBPP611pNv7cX5ldd0mQlnyoQ5A
+            ifObzgB3L9iRxa3JtX5N5p3rZH+mw0f5KMc2zLXq2G2ZngR/uFxrgA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T19:40:52Z"
-    mac: ENC[AES256_GCM,data:ujxR+Dp4iDzxtK50sMFFHS87RxGS0tShT0sIm0ORjyKChHUAkz1HTcirImdC9LS9M8ueoqsKJB4TQiqjeQ8Wm6hZd8N15UIY5CaTXp+CwwnJ/AZbyvXDoXNNIs/05eXbbugBbChh54WGPiahCWXF/Z66WydhuoHSxJwCSa88V9w=,iv:8k3FVbJGsW9p/bAPraNg6lgkYdUTIRH4RJqYD+aKNY0=,tag:candsNuu09qMnqWKZX1K3A==,type:str]
+    lastmodified: "2025-01-11T19:46:07Z"
+    mac: ENC[AES256_GCM,data:MZ/lE2NwJY/V3E/MOedTfHs6VPQaa2xHYlT5L20DYG8JiR5lxexctniQ1nuvkpXO3kedWgxqQabZZujoA8ic/hSttaQ/WfeL8jWNXNl2sEfDPPW8lZn1Wtr01qM8+/sCCg18Ox2sicaR2rPQU8yBkkcJsa1sfKyZ3Y0nCqxrrM0=,iv:pNG2YnB/57HAzlmIgGYKkEOWbHCty14N4N4UwHnhnis=,tag:Pcrw3T4aGVGH1/l594a8vw==,type:str]
     pgp: []
     version: 3.9.1
