--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:JRUmcVs4m+b7PmQr3+OXYEq5e25e08zs8Jpzt5H1ElXfo1iXLINooxmPFfhmQKoaOlaFkP3qh9jqmSSq6qmLzYo=,iv:PaO/LnpIRfHG8dQr+/gqR/3V6uPSBIg2Wuhz2Kt8xr8=,tag:dOuy6tY+m+MTt/TUR5kJ2w==,type:comment]
-    #ENC[AES256_GCM,data:Cl4y3DPL5vSTFuVdoPbvFX2+rcck0ije6DZWDvC+sRGQZVP8BnfBKYAnD4s=,iv:1HYvo+krM+5Trmw1gc1XlR28XODzqYz5hiCYM6jvK2Q=,tag:WnpTpvcrKW85iBkJ/rW3RA==,type:comment]
-    VIP: ENC[AES256_GCM,data:5539MxTCu4/l7BmuIQ==,iv:31F/GztV8OvYIhLO6RD+hxJTZKa9kVRWetxgj1m6ADc=,tag:MsR02+Ux9rWHezzzkHYeVw==,type:str]
-    #ENC[AES256_GCM,data:L5OAnnCekUJ2ByoL01xtQa5X8MgrNeC+dSfn,iv:34X0sfpqMt3AMSyYjZfN7GM0hjd0KiEbMj6Y74C/B1o=,tag:cjCocHdyYa+btCioA8LBCw==,type:comment]
-    #ENC[AES256_GCM,data:DqfloL0IPVgvx6cboAMYBYaHQ3o32rcq3bz8JkUWtAJD8FR0fs/NewvDWMTqtBkpk2p03tRMd9br24zEnbX9pAG1hIudROFo7ij2F7IW6PAGukLCyc77HX0=,iv:lDRCCi2JYAfaaFMb4t3958vfzpIsAgnO3F8Yw/u+xFo=,tag:C0oQxEDxVdbQzq1OAkdFAg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:L7ZupWLc0gW5sJnAw+g=,iv:uuVjyU229Olx32FhFOnISDBDAd0o27ZeHbFVto29+Lo=,tag:rIP1RMR520GpizpxrZoO1Q==,type:str]
-    #ENC[AES256_GCM,data:rLWFPUH73sWznn4xCoSf3I2HdBVPWwJvGScL6nRQC0Z1bQ==,iv:0+miy+loPrxDZpWUT4KTDQK59xvCSx840a65Gl/cN6o=,tag:o54eUVMH8hwNZDFC3QLsdw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:k9eiz7uLhdpiNWfQHw==,iv:7kxqKgfngUm9fjbeNfADuk91E16sWmBYREiMEGOYyXE=,tag:o/cO44FLLnwhwev1SyZgkw==,type:str]
-    #ENC[AES256_GCM,data:A+yBCI0RqMa5+plBlMUILb4rQC2Rfcy8OCJTtN1eFVPaUbeYTLwKQL+j06bleaM=,iv:ZIYWkfdPOplTz2klJmD9jdJL8SpHADROYCROuSSaiz8=,tag:ygE7LNXLS/mQ3jRgz/VQ/A==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:f4ccgOqwa6O8q/aeLRbM+dTGwTse+ADM0x9DoFREdA==,iv:UXiuDJ0THBLsxGCqhq0ErPBktQZh2qITj7umles43yw=,tag:tWiU1DBj/54DP0/CmBUASw==,type:str]
-    #ENC[AES256_GCM,data:Zu/Rl/QuxB6FZ5ArULeLaNcF3mn49i1yVTwGLkXUzlJrbhEKSQcq60kc6BEPiqm6xf7igYnnI9vF0rZ7VIYplsGooE8lLjauySLeCYM8sEjMfw==,iv:mD0tvKUxB6CcgHyIrBtguzKKRJV6FSZ/YNtdm2IaaQc=,tag:aMkVVaSEzeNoGft2WHOUHw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:pjy/qeH3RgkRx3OdliwY,iv:c3+/5rrYxZvnf1qnEHWqqapqxwPH2uMyslcpiWEzj6s=,tag:qFdGkTd9XrqGOspAdc2K5w==,type:str]
-    #ENC[AES256_GCM,data:flkgaYlAHgTV/lcPsyC4HRVBpyacHiTGjAZLZRs7xsQw,iv:Tc5dbAJXlB/bm25EmJCUKoID56E8hin5/nbys0OuXb4=,tag:KNa1NGSAlQ+Z2/gBt9Z0HQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:XqGMbHifp49bVm41WCg4,iv:+qPc14q9ariEFVM3tQLLovltd56IrF6B7Opj6Lorv1A=,tag:zaTbUyPjQtb5l/LAyw6GVg==,type:str]
-    #ENC[AES256_GCM,data:oxtZB3NoZkRTNnLFx0SCkReo8b0Q+bjqmDMoDzvFm/BDAPUwlwAqYON/IO/JjSE0Mk2w55zNXd6bG0u5eKG0Jhb1JSsoIZP4qDRKfV+gwSA=,iv:jTuMmXKMBWx9+1oud/Tkhn66z3L+o83N0Dt/MMSu02g=,tag:4Vd/CvQzxEOciO5d1I077w==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:KbEvoQ0pZ6hRyDZOUdjI,iv:5iNlh2LGBvCPiA98WwRbA2C/S9Eg6kKoHEuYJ0db5VU=,tag:jzye2SQA7IQMf1IGkANX0Q==,type:str]
-    #ENC[AES256_GCM,data:rWiSCb78Awi79QTdnqnkECjGTYFqYKTS7qR1KKVoeQBe5ub44e7R9jWlS9TMa/o0Iaq1je+3PEkLfia0j91FCp9tovlxsLTIsnLfLifrcnJm9JqezRBF,iv:+zFj2RZTKApKlRS0ZFtUqYXMSgGmUTIZZEw1JRdHKfE=,tag:+ciw4O87iM4rSFA4Mcbzzg==,type:comment]
-    #ENC[AES256_GCM,data:jKZoZMUqxBZ41UCpBZMZH7Puw4FCV0w7fADCNhfIF6Df2fNwd8AnVW6vNgxou6JNmxaNUs6udhTx2pvhO0h2PSC31KwvzzO/7Vv15ZD7ZGDYWihISaIuWxjDxQzSkng4HLO15dfYTT/XYvJR/x9lrZA30kfYerjlaqxwHg==,iv:j86e/sURQDbwh80OqExeUigapeJj6sCu+R0nV+a1p3U=,tag:Wxy739Z4YQkhKF/KRnUp+Q==,type:comment]
-    #ENC[AES256_GCM,data:q09e1cLqzfXMaPPXwPGq8nr850RfMSTQ4fY33C8max+DyUVsqXs0eUitWow1qjTR5Kxid9Mmom9LSJ5aqIndJmFXPMXW0pwvDHVeGHjsVeo=,iv:+SinkKdUaqcFMphp82KjDaQpvFGK+62tL5pYmdzC3Z0=,tag:5/lkZgWa1p00O8cP0KVT6g==,type:comment]
-    #ENC[AES256_GCM,data:jA4XnO6gP3xO34kSUOrVdt8LLCkVet8H60/jKqS3P+Bfi1HemoFnn/yRMbiNtuPsTXjRjAqB,iv:/w7uyFMVMmemnYUvq7W7oHEJ1uvREbOHBtCvcDpAhTg=,tag:r5ncNRtRDdcsY5NBxWzlYg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:43UdTLQeiAPIO9do,iv:IhwAaYviGfFiSwUW3Xhs2KFoStb0g8eqM1ONtQWc78k=,tag:yBt+DhUppQKoQhbGP26u4A==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:LrhPcezoKJrfHdorn0JrINw=,iv:+5GSXUfUtATHFetz7hYbcdK5EbK6pEWQEaxDxptfNSY=,tag:K5nIa7m96pesPS3TF9HbSg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:sqA37OGTo3NBt14vOLrS9/OESzcWXSp55DG4XiyABK4=,iv:IysGqt6VoRjb+SIfoPwy6OfZLiJhkH1PR+UlVRGLqtE=,tag:En9UvyaitZIVS4PLG4UN6w==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:58ceJYSbLK7ZZYU5V3t6Qu73N4U8pAWfdXEpXxilIa8mbFQcSQREBA==,iv:N2OnDQULnLeSmqdJRf+8b1C2GHYotqCMVxBSlwP/f/c=,tag:F8B6vgu+pQnNd4rKjjMoyQ==,type:str]
-    #ENC[AES256_GCM,data:QPIaL6pB4Co3QK3bnx+00H2N09NM2vlG8EZ5DanDFJ6hRjnPnZlW2YuudJqYdQvY8lLo3+uFwhQ5IZmOKkn0Nw==,iv:rcE3JngPRR1BL4vft+G1Fekf/msFdhoW13LHLQIVoqQ=,tag:X7qsAHDC7mTHipJQf6dALQ==,type:comment]
-    #ENC[AES256_GCM,data:UEB5ctiE2+qC0RL5aG3HbSPNLIE0axxBoUZTVdSXyKHqooFsWlHIA/3LI/CALurkG8jQaTFDGX8=,iv:DDJ7qx8M78Wy3pSnWClT49H1UHUNjyFHP4VKkdkvHCo=,tag:EK0H8MqPgxGNM14duSjoCA==,type:comment]
-    #ENC[AES256_GCM,data:980OVDLX7z3xzlgjPJxtg/EK4sCf3sbthA==,iv:k8nbGWGBpBjZUdElAX4TwPk+6XjZVDt4E0rz856QVYo=,tag:ctgN4k5e+goIu09KkH+QDA==,type:comment]
-    #ENC[AES256_GCM,data:zIQg3GP1zz3adqt8TSQ4iXhH39d+WiRhf6u8tIo0u6zHUBDpwyRpRT07KTwq9cCD1RFdnSUAfW0q5UM07CHMAcSBUnwfpB4OGrfse8s=,iv:GzKiHkCtpFoSQE5pWYI7rMvLIjMoj5+NKioNqGp5j7E=,tag:m5HcsJZzcjQQIAI8/9cvgA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:EyEnZXAArOfBdEzXsAYCetPRfENUh+Ozh/JgdNxWv1Kt8GN6aZbVHsje6MRjiwk8,iv:W7ZTYodfS0Q0wyuNCbWuJQUFCHCtnkXZBsKhnpzbcXI=,tag:7zao6o2fjWNmN4jxPE0UNg==,type:str]
-    #ENC[AES256_GCM,data:qL8fAb/xw95/hcwzS0Gyl4xDhMsBJcL+fF6Mc20BdajoAR/2qmYiNFUSSpOHIAwfQSFLIOpcoRsQsLkVCmXSno9mJJStW1k=,iv:aiLCBfYjGLsVghj2dRk56Q4STdT2V6dArByHl4WWgWQ=,tag:Leu66s+NwHdvSgPU25yTng==,type:comment]
-    #ENC[AES256_GCM,data:C99sN2425mSXyMkVEjlpyYfp/lR1Tz8a+moI9Un6Z4jxqKVI0f7t3Hx44Lo/PF4qFzMGrQh8,iv:khMXHKedp7/kLARBYuYk02HLkbNyJEL4uM0fzne9TOk=,tag:IDyJeFyUC7etrPqaaj/L3Q==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:6x35wogBIg==,iv:gK78ui52UZstTIscArc4SrwNAiWpr33DeIrBMHm2zqE=,tag:wl/RzJqbVgt3tqnAqZUG3A==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:zD8pJPtGbxV+4zJu1h01SbM7d1g=,iv:LVkmjmZbjsJ2YEIdRJ8ywKX6vZrzF4CQ7l4PnCQIH8g=,tag:xhJYFyQiciLorV7Pekrzpw==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:vmQJoA80reIthpw=,iv:BQ9z/+t2FbsX8DYOkr8mjw6s3+N2OhTHb3T+s8k9eAE=,tag:tapy8Wx+5NV0GAZ4cg9U4g==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:XM1xI2WH9R5vlsYHlhRj,iv:oKUPKqcS2EJ/6/siTgDU2OQfTQ6CWNPt8mGNkdSVOJ8=,tag:Xmniy9l7SUK+A19j1VLKzQ==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:sOIuKgPt+sF/0R9ZKGRomMkqTwHQOhgM+w==,iv:sqtxIDics3vFATlcJKvkn3i7TeLVWda8tqQ4p07lr/Y=,tag:UZZO/u8Ex+9ULdvmtwYFjw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:03mXOLly3l9R9RSeIGZTBA7kGmpp7kDO,iv:hLSqxNclb95HFla+zoh1Eu52nvq0P+9gFM/YpNSoqB0=,tag:GeSG+GX54SRGHaNAM5f9Eg==,type:str]
-    #ENC[AES256_GCM,data:d2qvaUlJwL8sannfFdyNqUfasMmTpiRiDX/+2efzY/qX1U4b8wk=,iv:LmYxhW8dRkwbEQiYHxH87nStKIwgg9vSOEPcryZCwoo=,tag:tj2UPcgyjcHbIq+kO4Oy/Q==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:M6UK1xYiSrXsjwo5s4tiUdbrY/o=,iv:zBGZ1ZmAKqYTdhtubr5kDTv6ycMuwX0cHN26Re3Rb4U=,tag:M5irqZHJM01f5AZ16iyD/w==,type:str]
-    #ENC[AES256_GCM,data:AN86AO6rXlvLprkaKr0=,iv:6PoZmU0LDfK2T0GJoGKFQsg9lUSX/B/p2XtxKqO7iRU=,tag:yq9rDPmhpEvAezUcWyKUlw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:wvOFV4cm8V4I+jU+og==,iv:7TV1466bIDIvP1Dk5yNbGizUZKDaE5GhhX2+fqWGgkE=,tag:HXv4HL1P5ahudoLWGTM++Q==,type:str]
-    SVCNET: ENC[AES256_GCM,data:19HX1/j2TGQlj5WIwA==,iv:41k6MolmBFNEQOQhQHAzcrySuRfMSkSkNjJdpNiqGOs=,tag:TOd4C2S9Dgv7gN6PW18SEA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:BXchzg==,iv:HDEbDDrOeB+VKpE4PHas0LBrpHUsO+iAmCVxGhNQDVU=,tag:kuwyUP6YHy0IicJSGRhQEw==,type:str]
+    #ENC[AES256_GCM,data:lv4AT/BCtxxDkF/oGk78ATh+JQCqvjIOQGxSOr3IH4HKB2ZMMYGJyFBfLjcJIoCMse6bE/3Bosy7NXdSHyiPz6c=,iv:nZx/JJEATfjmRPXL9lKaoxLdYP5FF3IEhbPryhXqWlQ=,tag:zYKOlUXUmmUhoyzBMSlj4Q==,type:comment]
+    #ENC[AES256_GCM,data:XPj/mV8ZyOEFwAxDhP+JfCv5IBwNgl7YbNhqIqfApkUo19bYUyyF5jDljWM=,iv:qTIHj3XzdvTGgzm6ndkOuDKCUY2FA6io9Go+xNzOtRc=,tag:CE+vTURxWU4wpZvjO8R9fA==,type:comment]
+    VIP: ENC[AES256_GCM,data:aBgOhFp+hXaPbvPlAQ==,iv:+3zbNS9kwI1fMR0dak3qK8uBhzNva9GjllKXisCoxps=,tag:CXgjXTTEuMpKT9+sZDDpiw==,type:str]
+    #ENC[AES256_GCM,data:igeARPF7gYoV8dibtQbKJz4OdazoNzDuqCun,iv:T3UoibUBlFCotjWubAojlPZr1FvQXMb7LgYSysdPNlw=,tag:COv5tGF6SxonxSUlY5UJcg==,type:comment]
+    #ENC[AES256_GCM,data:j9Rb6eu35Sqngw0e+rruLVbPQqR9fRIKjudcRhTlM2qR9/1IKThnj8BCNmv4wuqDFq4TIlzzmbEcsdz7Qd0VwB2s93ngZT2TjEjonRoW9vbPWajQAbUiSOw=,iv:G8JVtAMT+9ynlKcKXXtcuE/QlB30jIK4rsI2R0AXlkg=,tag:v76v4a9C+Mf/vorqEpYd+g==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:bOqkuWft49ho9eIFkN4=,iv:eWI/WAuGBj3u1H8YHlbadAylh5qWYt8z6k3KbuMvcus=,tag:xdt2BeHmqkVzgj0XnJ0Z3Q==,type:str]
+    #ENC[AES256_GCM,data:evlDWETFRYdloOAHDbodUxbYVUX7kpE0WXr5BDkTtmgRlw==,iv:DHgihbxqzfdjVJOB7qBXHY94JjPgFw2zI0lsbIHh0mo=,tag:ih/Bi339l4+zn7hFJUYy2A==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:NQ1Qi/S31U3viCZYxg==,iv:fDQ5FPSpzspkuEC9Cm1bYwfbUGA90T8xLT+tUsLnhVI=,tag:QqV3rpKH24MYEB2Gi/XkVQ==,type:str]
+    #ENC[AES256_GCM,data:/OIEXn3zYpKtFVmV92mEXUi7EEPWI0XQV1nQ4924R/zP/bSim4jjfAI4xmX8cPk=,iv:ID9iqQRjE9emgG3lTFgoQrEKmqK0eqaz1t5FK9MOLHM=,tag:CIN0vSdeaoC3snkJDDthRg==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:7Bt32wzS3SrVRVO8QmKE+e/ogzTUI7z4x6sNm14QOw==,iv:e4XeBBSV2YiN4zGdr+sxMasQF5t54IEKykI0Z3fxoSk=,tag:pqVWrBaj9ZPDX6hSJ+/pqw==,type:str]
+    #ENC[AES256_GCM,data:NXVO6JeGUYAblNcTghoJ7JNw9yRnX2lV0piUs8ZXDzKAH8h/7ji+9EzUNEFVMG1FI6DUypG62OzTjw/Oqk/VZMX2cLl4/yB0N6rJ/QlQw0T+qg==,iv:d2s18+mCRQ2haRuV095/tnq7YDgYbeeJ9tgZlajlRgw=,tag:EC/xjUkA0ks4ss662RKaFg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:TlSgwdhJprk/XqEpzDmU,iv:nXbjYmlgI4lYXqQbi8fNbc9EOL4hgRhqgi9oDTdulTQ=,tag:+5wb1A55wedeuxCRL/4Iug==,type:str]
+    #ENC[AES256_GCM,data:8Y2pDSjS0AfDYSA0Tiw+7y7lhX4OCzS9i18FTOGSwB29,iv:RR8907SAtuxQvyI4aDQcrsOKYFRb7l6XiS6QnqQLYVk=,tag:Rj+ZQcj9ZgPmOkTfBcikmQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:RRepZMLXG+fsMV4PAV72,iv:kEj6FhU5bmPj+OdLlgBAhWLB/L3NJQU6a2Y9zV/iaLk=,tag:KBbSCt0cHg3Q9qB9bGvMnQ==,type:str]
+    #ENC[AES256_GCM,data:pzcZ+8quBWcPrEyRvzz/+aD+HZYZTISnLPTY3B0IaDy4gU9jsFCiq5N2QMgXHLqKs/C1Z5a0jDrmH/V+hbxgRDhgX1C5S81pFE7AvwuCAR4=,iv:pJw/CjbwqdQYpDbpBrPd0L9nUPYrCRqRqYlNULNaSSs=,tag:cQE3cRjuUmmWTOxdElKPGA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:9E0jZMiZZ8BXZlulxaP/,iv:uG5BpGg39SJIk1hAVpyI6OfQuDftWEA+oWXlsgFJX/4=,tag:7EfCyaFbHu8+bAXkg6qtOg==,type:str]
+    #ENC[AES256_GCM,data:ADYzBkZew/6Q93Hy5AtoJ/ezjnALZTyRVLF0PyQFhrxCSxnFbCnOmv11FA+umczes6MdJ5WO4LTv2ZK2b9NmfdNtdDujSIxX2CQgx4tQ2dg9nnRNcgYg,iv:J5ZYJ5/9/YITLbQ/iFYqZm9EgKTBd5kaKopiWqC0+DA=,tag:TeX2eIMlZ372kSOoQp7Yfw==,type:comment]
+    #ENC[AES256_GCM,data:WAQkihMHft9LP90gajzC48FtF8WacoQYVttr/anYFW2E3yulA2m9YFMuzO7FEVRWDI+XfgMbNdK2Qtl+5PHKZtRLFOHZtj6tR4ZnCX1CZBmMC/c7k+/LpqrA6ynO8KPe8EjuzMv1gNkI/gGOw7wxv3jNs+R9eBlVOGXtwg==,iv:yxBIFPVYj6kzVNqrif7LLRGOdsDOF8pkS0y+/oR2kXw=,tag:wI4cEGHj4BVmHfkRvtw2nQ==,type:comment]
+    #ENC[AES256_GCM,data:fzHRWUITsJdyUlgK6w3fUCLjL7++yhrHA/Ff1+l6LR0asu3Ns3r78Xvw7ADol/R+ekhFLIzfMYYAIfGyHHPB+HiM/+2DWWuGLZPeqn6OUZY=,iv:5igVDRIFmg381UZw/g4249ND6i9h8p4U4RiEsyZW8NU=,tag:stpr0h4ORAsZLXpWxil3pg==,type:comment]
+    #ENC[AES256_GCM,data:rVuOQ11VJWn+fT3DMkeUo3I+nHFdp80fqd0ZEhMs6gUmrvf8YfQjBNqiVk/K4+BD9HFuoAuC,iv:uSdobCAZwiRgPk3gODcRdLOkjcIOCWXY/bpDGyG61Yk=,tag:d4xBDBmZQswdLvsQk3SMYA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:OuUwQbb0MsFe3t1C,iv:/RiFrn/dCQPZbR33WZcklEEFs+xLkhqAuW0Tws9T3Kg=,tag:sfkui1/RWHF/RZDLFKn67g==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:xo6nfJdh/m328Ys9esX5iGw=,iv:XB1fF3C8bkG+/8KyIc0SQR3fUgkaylfM0BKPaN6HaYU=,tag:YLrL1fJYV3TGt4pgBINasw==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:44RrrdGDZExNYXAU3AdzT443Uvnahp6obwdgntVGwow=,iv:G/M3cbfCb58cBaNnCzvcF6AyKJ9vTeQY/etAOvXDB4I=,tag:RrWZ4pr0s5eb43RvWgCHNA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:wxF+CVrBU0ZUDPFR8BdMWtbGTMc5hRSZGXUkbxxRQeqyuKv/aTiIJw==,iv:zw3vQ0Y9dj3Q3qoEaZaEXfr7hBpuUrErrdDjfizjKsI=,tag:e2EVd1+GSQg9j5FpobyxsQ==,type:str]
+    #ENC[AES256_GCM,data:QyiYHSO7/zlTU520iKbRY4ijppnJU9rM1EhdZU+C8TROsltpHujhHf6TFplozGlPC9D89BRnV78hC5m1HdMT1Q==,iv:kiD7JA3rs4uCqvGDw675GsoZDB7NEEd6GR5wQu1/iBo=,tag:mvk31VtuGkhZNtNpiH9hNA==,type:comment]
+    #ENC[AES256_GCM,data:JsFWx16cLDoJEq+Df1oxzG3rIdJ/S9JqS2pHLYZbHfvAiTsNO3FWE4CNcCvt272We3Vyjq/L4Gk=,iv:bUo7xe6ZcRloq7EGe1BfqRi/XkLYvB+iAh3wGimmocE=,tag:IRFjkPjXEi+VWiVPr4/b1g==,type:comment]
+    #ENC[AES256_GCM,data:DEXqfIhQkExDtYZV3C68Kqqu3g9oVm2EcA==,iv:k7Kl81gxguBFRbSjzTiGejyWgSVK8ERUzUAdwdXk61E=,tag:QuvOo/nYBpBB7EhbvUVC0Q==,type:comment]
+    #ENC[AES256_GCM,data:1TSns1zK/tZkQkuxPBXicLyPtvdfPoXDNEn0Ou+U/lU6td6llU76m6B81WMkkdGM/NeSDvWYvTf/Nk9wVTE6tcn1T6jUDiphVUA1n34=,iv:nx5JkmIx8Buv0/cN8loJKgcE2KXwwqyD3xfOeoRECTo=,tag:9QUWr63GsxzW2HHtGwETpg==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:i3Cz2PJgJNZ+zHPpkfc1O/T9lTOm4bIoAbEGzDF3ukKaH+QlAWcqEnAVT1RW/9ck,iv:SqGRD0J7zXMYRRNFfCaly+GYFTVNNX8acZwaD56Trj4=,tag:FEv6ICmAIZNeQDvh0BAykw==,type:str]
+    #ENC[AES256_GCM,data:5XdBxRVy8rO3mBudhl/QynA1Dd72BGRKumRiF+INZ5K4yyxdAxffKvnWLe86NGPGc7N2RcFWc96MZF+dPe3nNVFTJORjxsc=,iv:IXng2lCEswTgPzsPqnwHJ1b+iK90EHqXwCi/Ht7emPQ=,tag:DBf2Hn63tRY7WARLom39nQ==,type:comment]
+    #ENC[AES256_GCM,data:rAzApa3Gza44+7fMMcx37Y96Mt1QcwzAJO71FT5NEVhZRRBk+Hi6ho5SMCnf73yi+RY4y7eI,iv:VXP9wX7ef3Zvyzk/Q7UikTGQ8kuEurW5dvF9hYfWEQQ=,tag:LcM0CZp3Ud3OzpHdNJiU6w==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:DFvgGQDdfw==,iv:BLLz+31z+lAGMYNlUDd4UaJouXmQx6G7Qu8cYS2DisM=,tag:MSq4+R295KbRp8lBjsmTDQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:xj9+TsRpMhkCa0ociYBuf45z3UU=,iv:MaJ9cmMngx48/bUAJgAoRtp01aabMdi/eGXz/H9zXBs=,tag:2/qbmpsf6LKOtFWM4LaTLg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:qV8LMd1m9rNOn00=,iv:MTYfavtFnw1CrhGbv8MEcndKYURxpZ+eOo8vM6u7M/c=,tag:SntMIT9gQbS8lQwBhO5SAA==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:AqEYSM5qgTBINGgFQ1vh,iv:hka86FIJ0nRzniW2uw9C5C9631C0x7wtNW9LOVzG9pk=,tag:5nZQ9PiboDImed0aD84zjA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:/QTkKiZ4DIps0dzXEbZg+FVuna5aSXKRFQ==,iv:bjYpqldYR8B/64fCBaGKAz59ci0yomJ10hgg/m5ycSY=,tag:batmzHAGYxX+/A5O2+xqIA==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:mgUg2We7x4PIQDTQx0zX0LsSynQ83yg2,iv:7d1TYHvsf/qUGOzfrdy0gcaxcX8e3e93QaLlcYRLrsg=,tag:+xOjzJG3T9C05fI0zmfBWw==,type:str]
+    #ENC[AES256_GCM,data:x1TlrvMo4Smhw2NrL6bMUhbpcj8HBXeKm5n/B4o8yV9OVKE0rxI=,iv:zC5sLk85PmjFYcEQh8sNrAdfM5o/WEvVsAkUi//cUjY=,tag:lz2YcbgeDr7aHqk4OpF01g==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:43iDuihS6Ki/2JpZ/BzBJvCGEq4=,iv:18a8cx7NCOJoYt6ZpKwDPsROrEx1nFvcLnxRiido1QY=,tag:w10AE4HPZUgNpHR/beNzwQ==,type:str]
+    #ENC[AES256_GCM,data:SnRi2ci9pTxbxX2jsvA=,iv:Tz41N691EHiRUMDsHjAb3cMhWPcHp96vt0Pa+YnxMrc=,tag:Nf7s0mi6cOoRJ2wPt1njIg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:lIYJJE5EWqHbf8A+HQ==,iv:AdUDFepaZyFHYrkwRTK7eLgdDrb4vHtznlcx44W/YdU=,tag:0bThQZFdZ2n8RCcCWALd+Q==,type:str]
+    SVCNET: ENC[AES256_GCM,data:37KqpIvjsCoNjBQaOA==,iv:38dLME98iIaLrl5a/UqBwTv2Ir4QrJJ9ndsCHHjgA44=,tag:KvPL5KGrThh6p8xZrXtpYw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:634xEg==,iv:WEhgPBRxiUb/Hh4cHhdxErP3yMN/epAwI87FLFiYlJA=,tag:2V78S/j9qS3vlLnmd2saTA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBidStYci9HWnJQN0NSWHpu
-            UGNQZDlpZ2FzTUVLbkhDN3RxU24ybzErK1Q4CkVvZDNEWVY3bi9Pd25XajlSRzhS
-            em9FSm5GQWlERmhkdUI5bkpZakJpb0UKLS0tIGtWVXV3ZFRlRkVjdXpub0x5bGNF
-            VUtudXdLS3dmb0l1eWpvZ2FJRktCTk0KEPGghwSYgjAqdNaOYfjbBZcAyw8hSUAj
-            l5OmrK5If5Ip80KzNQVle6v5Ne3qcFGBqs8JIJ8fBug9uzwrtnptPQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlcmMreFRCTUxjUHJYeFBl
+            VXJVMEJ1ZGRwRXd1eDQzQ1VzRmkzZzhYb2kwCk5DOW9sNWxjNnVqcVc0Tm15RkVC
+            a2x2N095Z0NqNXNhekVKaEFuWlhHa0EKLS0tIFcwblYrTTdhTHNYcWo4TTh5VGZ3
+            R2FuM0toU3l0N05WYnZPSHlOdktiUWcKZW1xZza1fhu3gm9ThvPoUmi7XcafkgOF
+            NDRvftVzhdVlf1G446FB1CgkJ3tU5Y3x+MLAm8tR3eHtNFNAi050CQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T19:40:52Z"
-    mac: ENC[AES256_GCM,data:/aIzn1+NIq5jd8/Lt1ddcMvVPDmbB27cK0lPA89+S9UgBScoEPMAyEVfbWFGGWBfykkXRm4NuTAIxHGfei9lFcuMrGOSmsf0p2ZBdPpAnP+sPWLWpIAtCVE0a4D66Z3tCBDR5UVLw5sctWDnY5IDwCESU0i2HFM9Fy7BzNZBBE4=,iv:UlaVIVmn/Tw0SIZfVeL7z3hbwRrzIYjPfnUeFEtAO+c=,tag:xXvo7ThrO5LvampAfgQulg==,type:str]
+    lastmodified: "2025-01-11T19:46:07Z"
+    mac: ENC[AES256_GCM,data:eaE+1WcyOmwclpt6KkEdPRJtfKBWLcRk6liy1YZuivNntDLm6POksB3Iq5orEBhN96+3P1W5p7l8pb6oh29v5ip/QL3BHTaNAztM7NMY40yGxvh6EJtSGgLVBNPn4ZHCNpVhAEAbwOFrZhIqBjT48+oh3ulrSCW4kh5pm18Kn2k=,iv:pjDtY4jNV3Eq4I9JHQvgmdtTu80X79MyrmTuebEuBRQ=,tag:KS9ChlSims2h98q8Y/zYEg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
